# factor-model-investigation

./: README.md  pyproject.toml
src/factormodel/: __init__.py  data.py  factor_model.py  utils.py
